fix:adjust layout bugs and bugs values

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-
   height: 30rem;
   background-color: #fff;
   border-radius: 10px;
