--- a/src/app/components/select/select.component.css
+++ b/src/app/components/select/select.component.css
@@ -1,24 +1,27 @@
-  .input-group {
+  .select-group {
     margin-bottom: 20px;
     width: 100%;
+  
   }
   
-  .input-group label {
+  .select-group label {
     margin-bottom: 5px;
     font-weight: 500;
     color: #000000;
   }
   
-  .input-group input {
+  .select-group select {
     height: 40px;
     border: 1px solid #ccc;
     padding: 10px;
     width: 100%;
-    border-radius: 10px;
+    color: #333;
+    border-radius: 5px;
+    cursor: pointer;
     font-size: 16px;
   }
+  .select-group option {
   
-  .input-group input:focus {
-    border-color: #5b35f1;
-    outline: none;
+    
+    color: #333;
   }
